v2 - Component-Grid lines: rework responsive naming
Also reworked horizontal borders

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -3840,7 +3840,7 @@ Anchor variants:<br />
 
 <h3>Grid lines</h3>
 <div class="card bg-faded gridline-sample0">
-    <div class="gridline gridline-xs-vr gridline-xs-hr">
+    <div class="gridline gridline-vr gridline-hr">
         <div class="gridline-item col-md-6">
             <h4>Header Level 4</h4>
             <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
@@ -3852,7 +3852,7 @@ Anchor variants:<br />
             <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit. Keytar helvetica VHS salvia yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio cillum wes anderson 8-bit, sustainable jean shorts beard ut DIY ethical culpa terry richardson biodiesel. Art party scenester stumptown.</p>
         </div>
     </div>
-    <div class="gridline gridline-xs-hr">
+    <div class="gridline gridline-hr">
         <div class="gridline-item col-md-6">
             <h4>Header Level 4</h4>
             <p>Raw denim you probably haven't heard of them jean shorts Austin.</p>
@@ -3867,12 +3867,12 @@ Anchor variants:<br />
 <h3>Grid: Single column</h3>
 <div class="card bg-faded gridline-sample">
     Rule: Horizontal
-    <div class="gridline gridline-xs-hr">
+    <div class="gridline gridline-hr">
         <div class="gridline-item col-md-12">
             <p>Row 1 - Column 1</p>
         </div>
     </div>
-    <div class="gridline gridline-xs-hr">
+    <div class="gridline gridline-hr">
         <div class="gridline-item col-md-12">
             <p>Row 2 - Column 1</p>
         </div>
@@ -3904,7 +3904,7 @@ Anchor variants:<br />
 </div>
 <div class="card bg-faded gridline-sample">
     Rule: Horizontal
-    <div class="gridline gridline-xs-hr">
+    <div class="gridline gridline-hr">
         <div class="gridline-item col-md-6">
             <p>Row 1 - Column 1</p>
         </div>
@@ -3912,18 +3912,26 @@ Anchor variants:<br />
             <p>Row 1 - Column 2</p>
         </div>
     </div>
-    <div class="gridline gridline-xs-hr">
+    <div class="gridline gridline-hr">
         <div class="gridline-item col-md-6">
             <p>Row 2 - Column 1</p>
         </div>
         <div class="gridline-item col-md-6">
             <p>Row 2 - Column 2</p>
+        </div>
+    </div>
+    <div class="gridline gridline-hr">
+        <div class="gridline-item col-md-6">
+            <p>Row 3 - Column 1</p>
+        </div>
+        <div class="gridline-item col-md-6">
+            <p>Row 3 - Column 2</p>
         </div>
     </div>
 </div>
 <div class="card bg-faded gridline-sample">
     Rule: Both
-    <div class="gridline gridline-xs-hr gridline-md-vr">
+    <div class="gridline gridline-hr gridline-md-vr">
         <div class="gridline-item col-md-6">
             <p>Row 1 - Column 1</p>
         </div>
@@ -3931,12 +3939,20 @@ Anchor variants:<br />
             <p>Row 1 - Column 2</p>
         </div>
     </div>
-    <div class="gridline gridline-xs-hr gridline-md-vr">
+    <div class="gridline gridline-hr gridline-md-vr">
         <div class="gridline-item col-md-6">
             <p>Row 2 - Column 1</p>
         </div>
         <div class="gridline-item col-md-6">
             <p>Row 2 - Column 2</p>
+        </div>
+    </div>
+    <div class="gridline gridline-hr gridline-md-vr">
+        <div class="gridline-item col-md-6">
+            <p>Row 3 - Column 1</p>
+        </div>
+        <div class="gridline-item col-md-6">
+            <p>Row 3 - Column 2</p>
         </div>
     </div>
 </div>
@@ -3972,7 +3988,7 @@ Anchor variants:<br />
 </div>
 <div class="card bg-faded gridline-sample">
     Rule: Horizontal
-    <div class="gridline gridline-xs-hr">
+    <div class="gridline gridline-hr">
         <div class="gridline-item col-md-4">
             <p>Row 1 - Column 1</p>
         </div>
@@ -3983,7 +3999,7 @@ Anchor variants:<br />
             <p>Row 1 - Column 3</p>
         </div>
     </div>
-    <div class="gridline gridline-xs-hr">
+    <div class="gridline gridline-hr">
         <div class="gridline-item col-md-4">
             <p>Row 2 - Column 1</p>
         </div>
@@ -3992,12 +4008,23 @@ Anchor variants:<br />
         </div>
         <div class="gridline-item col-md-4">
             <p>Row 2 - Column 3</p>
+        </div>
+    </div>
+    <div class="gridline gridline-hr">
+        <div class="gridline-item col-md-4">
+            <p>Row 3 - Column 1</p>
+        </div>
+        <div class="gridline-item col-md-4">
+            <p>Row 3 - Column 2</p>
+        </div>
+        <div class="gridline-item col-md-4">
+            <p>Row 3 - Column 3</p>
         </div>
     </div>
 </div>
 <div class="card bg-faded gridline-sample">
     Rule: Both
-    <div class="gridline gridline-xs-hr gridline-md-vr">
+    <div class="gridline gridline-hr gridline-md-vr">
         <div class="gridline-item col-md-4">
             <p>Row 1 - Column 1</p>
         </div>
@@ -4008,7 +4035,7 @@ Anchor variants:<br />
             <p>Row 1 - Column 3</p>
         </div>
     </div>
-    <div class="gridline gridline-xs-hr gridline-md-vr">
+    <div class="gridline gridline-hr gridline-md-vr">
         <div class="gridline-item col-md-4">
             <p>Row 2 - Column 1</p>
         </div>
@@ -4017,6 +4044,17 @@ Anchor variants:<br />
         </div>
         <div class="gridline-item col-md-4">
             <p>Row 2 - Column 3</p>
+        </div>
+    </div>
+    <div class="gridline gridline-hr gridline-md-vr">
+        <div class="gridline-item col-md-4">
+            <p>Row 3 - Column 1</p>
+        </div>
+        <div class="gridline-item col-md-4">
+            <p>Row 3 - Column 2</p>
+        </div>
+        <div class="gridline-item col-md-4">
+            <p>Row 3 - Column 3</p>
         </div>
     </div>
 </div>
