v2 - Layout-Grid: rework responsive naming
Upate docs, examples, and tests as well.

--- a/test/visual/flexbox-input.html
+++ b/test/visual/flexbox-input.html
@@ -33,7 +33,7 @@ Holder.addTheme("gray", {
 </head>
 <body>
 
-<div class="container"><div class="row"><div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 col-xl-4">
+<div class="container"><div class="row"><div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-4">
     <h1>Input Group</h1>
 
     <p>
