--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -746,10 +746,6 @@ Showing a <kbd>kdb sample</kbd>
 <h3>Contextual table</h3>
 <div class="table-responsive">
   <table class="table table-bordered">
-    <colgroup>
-      <col class="col-xs-1">
-      <col class="col-xs-7">
-    </colgroup>
     <thead>
       <tr>
         <th>Class</th>
@@ -1297,14 +1293,14 @@ Showing a <kbd>kdb sample</kbd>
 
 <h3>Custom sizing</h3>
 <div class="row">
-  <div class="col-xs-2">
-    <input type="text" class="form-control" placeholder=".col-xs-2">
+  <div class="col-2">
+    <input type="text" class="form-control" placeholder=".col-2">
   </div>
-  <div class="col-xs-3">
-    <input type="text" class="form-control" placeholder=".col-xs-3">
+  <div class="col-3">
+    <input type="text" class="form-control" placeholder=".col-3">
   </div>
-  <div class="col-xs-4">
-    <input type="text" class="form-control" placeholder=".col-xs-4">
+  <div class="col-4">
+    <input type="text" class="form-control" placeholder=".col-4">
   </div>
 </div>
 
