--- a/test/visual/flexbox-cards.html
+++ b/test/visual/flexbox-cards.html
@@ -54,9 +54,9 @@ Holder.addTheme("gray", {
     </ul>
 
     <div class="row">
-        <div class="col-xs-4">.col-xs-4</div>
-        <div class="col-xs-4">.col-xs-4</div>
-        <div class="col-xs-4">.col-xs-4</div>
+        <div class="col-4">.col-4</div>
+        <div class="col-4">.col-4</div>
+        <div class="col-4">.col-4</div>
     </div>
 
     normal:
@@ -150,10 +150,10 @@ Holder.addTheme("gray", {
     <hr />
 
     <div class="row">
-        <div class="col-xs-3">.col-xs-3</div>
-        <div class="col-xs-3">.col-xs-3</div>
-        <div class="col-xs-3">.col-xs-3</div>
-        <div class="col-xs-3">.col-xs-3</div>
+        <div class="col-3">.col-3</div>
+        <div class="col-3">.col-3</div>
+        <div class="col-3">.col-3</div>
+        <div class="col-3">.col-3</div>
     </div>
 
     normal:
