--- a/test/visual/flexbox-media.html
+++ b/test/visual/flexbox-media.html
@@ -32,7 +32,7 @@ Holder.addTheme("gray", {
 </head>
 <body>
 
-<div class="container"><div class="row"><div class="col-xs-12 col-sm-10 col-md-8 col-lg-6 col-xl-4">
+<div class="container"><div class="row"><div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-4">
     <h1>Media object</h1>
 
     <p>
