Update style tests

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -415,8 +415,6 @@ Showing a <kbd>kdb sample</kbd>
 
 <h3>Image shapes</h3>
 <p>
-  <img data-src="holder.js/150x150" class="img-rounded" alt="Square placeholder image with rounded corners" />
-  <img data-src="holder.js/150x150" class="img-circle" alt="Square placeholder image where only the portion within the circle circumscribed about said square is visible" />
   <img data-src="holder.js/150x150" class="img-thumbnail" alt="Square placeholder image with a white border around it." />
 </p>
 
@@ -427,7 +425,7 @@ Showing a <kbd>kdb sample</kbd>
 </figure>
 
 <figure class="figure">
-  <img data-src="holder.js/300x200" class="figure-img img-responsive img-rounded" alt="A square placeholder image with rounded corners in a figure.">
+  <img data-src="holder.js/300x200" class="figure-img img-responsive radius-a" alt="A square placeholder image with rounded corners in a figure.">
   <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
 </figure>
 
@@ -3802,37 +3800,6 @@ Anchor variants:<br />
   Popover on left
 </button>
 </p>
-
-<h3>Row alignment</h3>
-<div class="valign-top valign-sample">
-    <div class="valign-item">
-        <a href="#">View more in teacher's guide</a> |
-        <a href="#">Common Core alignment</a>
-    </div>
-    <div class="valign-item text-right">
-        <button type="button" class="btn btn-primary">ok, got it!</button>
-    </div>
-</div>
-<br />
-<div class="valign-middle valign-sample">
-    <div class="valign-item">
-        <a href="#">View more in teacher's guide</a> |
-        <a href="#">Common Core alignment</a>
-    </div>
-    <div class="valign-item text-right">
-        <button type="button" class="btn btn-primary">ok, got it!</button>
-    </div>
-</div>
-<br />
-<div class="valign-bottom valign-sample">
-    <div class="valign-item">
-        <a href="#">View more in teacher's guide</a> |
-        <a href="#">Common Core alignment</a>
-    </div>
-    <div class="valign-item text-right">
-        <button type="button" class="btn btn-primary">ok, got it!</button>
-    </div>
-</div>
 
 <h3>Grid lines</h3>
 <div class="card bg-faded gridline-sample0">
