v2- Component-Badges: rename .tag to .badge to remove wordpress confict

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1678,18 +1678,18 @@ Anchor variants:<br />
   <li class="list-group-item active">Vestibulum at eros</li>
 </ul>
 
-<h3>List group with labels</h3>
+<h3>List group with badges</h3>
 <ul class="list-group">
   <li class="list-group-item">
-    <span class="tag tag-pill float-right">14</span>
+    <span class="badge badge-pill float-right">14</span>
     Cras justo odio
   </li>
   <li class="list-group-item">
-    <span class="tag tag-pill float-right">2</span>
+    <span class="badge badge-pill float-right">2</span>
     Dapibus ac facilisis in
   </li>
   <li class="list-group-item">
-    <span class="tag tag-pill float-right">1</span>
+    <span class="badge badge-pill float-right">1</span>
     Morbi leo risus
   </li>
 </ul>
@@ -2936,58 +2936,58 @@ Anchor variants:<br />
   </div>
 </div>
 
-<h3>Tags</h3>
-<h1>Example heading <span class="tag">New</span></h1>
-<h2>Example heading <span class="tag">New</span></h2>
-<h3>Example heading <span class="tag">New</span></h3>
-<h4>Example heading <span class="tag">New</span></h4>
-<h5>Example heading <span class="tag">New</span></h5>
-<h6>Example heading <span class="tag">New</span></h6>
+<h3>Badge</h3>
+<h1>Example heading <span class="badge">New</span></h1>
+<h2>Example heading <span class="badge">New</span></h2>
+<h3>Example heading <span class="badge">New</span></h3>
+<h4>Example heading <span class="badge">New</span></h4>
+<h5>Example heading <span class="badge">New</span></h5>
+<h6>Example heading <span class="badge">New</span></h6>
 
-<h3>Tags contextual</h3>
-<span class="tag">Default</span>
-<span class="tag tag-primary">Primary</span>
-<span class="tag tag-secondary">Secondary</span>
-<span class="tag tag-success">Success</span>
-<span class="tag tag-info">Info</span>
-<span class="tag tag-warning">Warning</span>
-<span class="tag tag-danger">Danger</span>
+<h3>Badge contextual</h3>
+<span class="badge">Default</span>
+<span class="badge badge-primary">Primary</span>
+<span class="badge badge-secondary">Secondary</span>
+<span class="badge badge-success">Success</span>
+<span class="badge badge-info">Info</span>
+<span class="badge badge-warning">Warning</span>
+<span class="badge badge-danger">Danger</span>
 
-<h3>Tags anchors</h3>
-<a href="#" class="tag">Default</a>
-<a href="#"  class="tag tag-primary">Primary</a>
-<a href="#"  class="tag tag-secondary">Secondary</a>
-<a href="#"  class="tag tag-success">Success</a>
-<a href="#"  class="tag tag-info">Info</a>
-<a href="#"  class="tag tag-warning">Warning</a>
-<a href="#"  class="tag tag-danger">Danger</a>
+<h3>Badge anchors</h3>
+<a href="#" class="badge">Default</a>
+<a href="#" class="badge badge-primary">Primary</a>
+<a href="#" class="badge badge-secondary">Secondary</a>
+<a href="#" class="badge badge-success">Success</a>
+<a href="#" class="badge badge-info">Info</a>
+<a href="#" class="badge badge-warning">Warning</a>
+<a href="#" class="badge badge-danger">Danger</a>
 
-<h3>Tag pills</h3>
-<span class="tag tag-pill">Default</span>
-<span class="tag tag-pill tag-primary">Primary</span>
-<span class="tag tag-pill tag-secondary">Secondary</span>
-<span class="tag tag-pill tag-success">Success</span>
-<span class="tag tag-pill tag-info">Info</span>
-<span class="tag tag-pill tag-warning">Warning</span>
-<span class="tag tag-pill tag-danger">Danger</span>
+<h3>Badge pills</h3>
+<span class="badge badge-pill">Default</span>
+<span class="badge badge-pill badge-primary">Primary</span>
+<span class="badge badge-pill badge-secondary">Secondary</span>
+<span class="badge badge-pill badge-success">Success</span>
+<span class="badge badge-pill badge-info">Info</span>
+<span class="badge badge-pill badge-warning">Warning</span>
+<span class="badge badge-pill badge-danger">Danger</span>
 
-<h3>Tags outline</h3>
-<span class="tag tag-outline">Default</span>
-<span class="tag tag-outline-primary">Primary</span>
-<span class="tag tag-outline-secondary">Secondary</span>
-<span class="tag tag-outline-success">Success</span>
-<span class="tag tag-outline-info">Info</span>
-<span class="tag tag-outline-warning">Warning</span>
-<span class="tag tag-outline-danger">Danger</span>
+<h3>Badge outline</h3>
+<span class="badge badge-outline">Default</span>
+<span class="badge badge-outline-primary">Primary</span>
+<span class="badge badge-outline-secondary">Secondary</span>
+<span class="badge badge-outline-success">Success</span>
+<span class="badge badge-outline-info">Info</span>
+<span class="badge badge-outline-warning">Warning</span>
+<span class="badge badge-outline-danger">Danger</span>
 
-<h3>Tags outline anchors</h3>
-<a href="#" class="tag tag-outline">Default</a>
-<a href="#"  class="tag tag-outline-primary">Primary</a>
-<a href="#"  class="tag tag-outline-secondary">Secondary</a>
-<a href="#"  class="tag tag-outline-success">Success</a>
-<a href="#"  class="tag tag-outline-info">Info</a>
-<a href="#"  class="tag tag-outline-warning">Warning</a>
-<a href="#"  class="tag tag-outline-danger">Danger</a>
+<h3>Badge outline anchors</h3>
+<a href="#" class="badge badge-outline">Default</a>
+<a href="#"  class="badge badge-outline-primary">Primary</a>
+<a href="#"  class="badge badge-outline-secondary">Secondary</a>
+<a href="#"  class="badge badge-outline-success">Success</a>
+<a href="#"  class="badge badge-outline-info">Info</a>
+<a href="#"  class="badge badge-outline-warning">Warning</a>
+<a href="#"  class="badge badge-outline-danger">Danger</a>
 
 
 <h3>Alerts</h3>
