--- a/test/visual/flexbox-list-group.html
+++ b/test/visual/flexbox-list-group.html
@@ -64,15 +64,15 @@ flex:
 normal:
 <ul class="list-group">
   <li class="list-group-item">
-    <span class="tag tag-default tag-pill float-right">14</span>
+    <span class="badge badge-pill float-right">14</span>
     Cras justo odio
   </li>
   <li class="list-group-item">
-    <span class="tag tag-default tag-pill float-right">2</span>
+    <span class="badge badge-pill float-right">2</span>
     Dapibus ac facilisis in
   </li>
   <li class="list-group-item">
-    <span class="tag tag-default tag-pill float-right">1</span>
+    <span class="badge badge-pill float-right">1</span>
     Morbi leo risus
   </li>
 </ul>
@@ -81,15 +81,15 @@ flex:
 <ul class="list-group list-group-flex">
   <li class="list-group-item flex-between">
     Cras justo odio
-    <span class="tag tag-default tag-pill">14</span>
+    <span class="badge badge-pill">14</span>
   </li>
   <li class="list-group-item flex-between">
     Dapibus ac facilisis in
-    <span class="tag tag-default tag-pill">2</span>
+    <span class="badge badge-pill">2</span>
   </li>
   <li class="list-group-item flex-between">
     Morbi leo risus
-    <span class="tag tag-default tag-pill">1</span>
+    <span class="badge badge-pill">1</span>
   </li>
 </ul>
 
