--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1375,7 +1375,7 @@ Showing a <kbd>kdb sample</kbd>
 </div>
 
 <h3>Custom Forms: Checkbox</h3>
-<div class="margin-b-1">
+<div class="mb-1">
   <label class="custom-control custom-checkbox">
     <input type="checkbox" class="custom-control-input">
     <span class="custom-control-indicator"></span>
@@ -1383,7 +1383,7 @@ Showing a <kbd>kdb sample</kbd>
   </label>
 </div>
 
-<div class="margin-b-1">
+<div class="mb-1">
   <label class="custom-control custom-checkbox">
     <input type="checkbox" class="custom-control-input">
     <span class="custom-control-indicator"></span>
@@ -1392,7 +1392,7 @@ Showing a <kbd>kdb sample</kbd>
 </div>
 
 <h3>Custom Forms: Radio</h3>
-<div class="margin-b-1">
+<div class="mb-1">
   <label class="custom-control custom-radio">
     <input id="radio1" name="radio" type="radio" class="custom-control-input">
     <span class="custom-control-indicator"></span>
@@ -1406,7 +1406,7 @@ Showing a <kbd>kdb sample</kbd>
 </div>
 
 <h3>Custom Forms: Disabled</h3>
-<div class="margin-b-1">
+<div class="mb-1">
   <label class="custom-control custom-checkbox">
     <input type="checkbox" class="custom-control-input" disabled>
     <span class="custom-control-indicator"></span>
@@ -1440,7 +1440,7 @@ Showing a <kbd>kdb sample</kbd>
 </div>
 
 <h3>Custom Forms: Stacked</h3>
-<div class="custom-controls-stacked margin-b-1">
+<div class="custom-controls-stacked mb-1">
   <label class="custom-control custom-radio">
     <input id="radioStacked1" name="radio-stacked" type="radio" class="custom-control-input">
     <span class="custom-control-indicator"></span>
@@ -1453,7 +1453,7 @@ Showing a <kbd>kdb sample</kbd>
   </label>
 </div>
 
-<div class="custom-controls-stacked margin-b-1">
+<div class="custom-controls-stacked mb-1">
   <label class="custom-control custom-radio">
     <input id="checkStacked1" type="checkbox" class="custom-control-input">
     <span class="custom-control-indicator"></span>
@@ -1468,7 +1468,7 @@ Showing a <kbd>kdb sample</kbd>
 
 
 <h3>Custom Forms: Select Menu</h3>
-<div class="margin-b-1">
+<div class="mb-1">
   <select class="custom-select">
     <option selected>Open this select menu</option>
     <option value="1">One</option>
@@ -1478,12 +1478,12 @@ Showing a <kbd>kdb sample</kbd>
 </div>
 
 <h3>Custom Forms: Color Picker</h3>
-<div class="margin-b-1">
+<div class="mb-1">
   <input class="custom-color" type="color" value="#117dba" id="color">
 </div>
 
 <h3>Custom Forms: File Browser</h3>
-<div class="margin-b-1">
+<div class="mb-1">
   <label class="custom-file">
     <input type="file" id="file" class="custom-file-input">
     <span class="custom-file-control"></span>
