--- a/test/visual/forms.html
+++ b/test/visual/forms.html
@@ -191,7 +191,7 @@ Holder.addTheme("gray", {
 <hr />
 
 <h3>Select Sizing:</h3>
-<div class="margin-b-1">
+<div class="mb-1">
     <select class="form-control form-control-xl">
         <option>Extra large select</option>
     </select>
@@ -212,7 +212,7 @@ Holder.addTheme("gray", {
 <hr />
 
 <h3>Custom Select Sizing:</h3>
-<div class="margin-b-1">
+<div class="mb-1">
     <select class="custom-select custom-select-xl">
         <option>Extra large select</option>
     </select>
