--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -287,8 +287,8 @@ Holder.addTheme("gray", {
     <span class="text-capitalize">capitalize text</span><br />
 </p>
 
-<p><abbr>attr (no title)</abbr></p>
-<p><abbr title="attribute">attr</abbr></p>
+<p><abbr>abbr (no title)</abbr></p>
+<p><abbr title="abbreviation">abbr</abbr></p>
 <p><abbr title="HyperText Markup Language" class="initialism">HTML</abbr></p>
 
 <h3>Text - context</h3>
