--- a/utilities/index.html
+++ b/utilities/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
 <meta charset="utf-8">
 <title>Redirecting…</title>
-<link rel="canonical" href="http://figuration.org/utilities/clearfix/">
-<meta http-equiv="refresh" content="0; url=http://figuration.org/utilities/clearfix/">
+<link rel="canonical" href="http://figuration.org/utilities/borders/">
+<meta http-equiv="refresh" content="0; url=http://figuration.org/utilities/borders/">
 <h1>Redirecting…</h1>
-<a href="http://figuration.org/utilities/clearfix/">Click here if you are not redirected.</a>
-<script>location="http://figuration.org/utilities/clearfix/"</script>
+<a href="http://figuration.org/utilities/borders/">Click here if you are not redirected.</a>
+<script>location="http://figuration.org/utilities/borders/"</script>
 </html>
