--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -907,8 +907,8 @@ $(window).ready(function() {
                     <li class="nav-item"><a href="#tabpanel1" class="nav-link" data-cfw="tab">Tab 1</a></li>
                     <li class="nav-item active"><a href="#tabpanel2" class="nav-link" data-cfw="tab">Tab 2</a></li>
                     <li class="nav-item"><a href="#tabpanel3" class="nav-link" data-cfw="tab">Tab 3</a></li>
-                    <li class="nav-item"><a href="#tabpanel4" class="nav-link" data-cfw="tab">Tab 4</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link disabled" data-cfw="tab" data-cfw-tab-target="#tabpanel5">Tab 5</a></li>
+                    <li class="nav-item"><a href="#tabpanel4" class="nav-link disabled" data-cfw="tab">Tab 4</a></li>
+                    <li class="nav-item"><a href="#tabpanel5" class="nav-link" data-cfw="tab" data-cfw-tab-target="#tabpanel5">Tab 5</a></li>
                 </ul>
                 <div class="tab-content">
                     <div class="tab-pane" id="tabpanel1">
