--- a/test/visual/forms.html
+++ b/test/visual/forms.html
@@ -46,7 +46,7 @@ Holder.addTheme("gray", {
         <button type="button" class="btn btn-primary btn-xs">Test</button>
       </div>
       <div class="col-md-1">
-        <label class="form-control-label-xs">Label</label>
+        <label class="form-control-label form-control-label-xs">Label</label>
       </div>
       <fieldset class="form-group col-md-3">
         <label for="size0-0" class="sr-only">Example label</label>
@@ -78,7 +78,7 @@ Holder.addTheme("gray", {
         <button type="button" class="btn btn-primary btn-sm">Test</button>
       </div>
       <div class="col-md-1">
-        <label class="form-control-label-sm">Label</label>
+        <label class="form-control-label form-control-label-sm">Label</label>
       </div>
       <fieldset class="form-group col-md-3">
         <label for="size1-0" class="sr-only">Example label</label>
@@ -142,7 +142,7 @@ Holder.addTheme("gray", {
         <button type="button" class="btn btn-primary btn-lg">Test</button>
       </div>
       <div class="col-md-1">
-        <label class="form-control-label-lg">Label</label>
+        <label class="form-control-label form-control-label-lg">Label</label>
       </div>
       <fieldset class="form-group col-md-3">
         <label for="size3-0" class="sr-only">Example label</label>
@@ -174,7 +174,7 @@ Holder.addTheme("gray", {
         <button type="button" class="btn btn-primary btn-xl">Test</button>
       </div>
       <div class="col-md-1">
-        <label class="form-control-label-xl">Label</label>
+        <label class="form-control-label form-control-label-xl">Label</label>
       </div>
       <fieldset class="form-group col-md-3">
         <label for="size4-0" class="sr-only">Example label</label>
