overhaul and simplify form and input group sizing

--- a/test/visual/flexbox-input.html
+++ b/test/visual/flexbox-input.html
@@ -285,6 +285,85 @@ flex:
     </span>
 </div>
 
+<hr />
+
+<h3>Input group sizes</h3>
+normal:
+<div class="input-group input-group-xl">
+  <span class="input-group-addon" id="sizing-addon-n1">@</span>
+  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon-n1">
+  <span class="input-group-btn">
+      <button class="btn" type="button">Go!</button>
+  </span>
+</div>
+<div class="input-group input-group-lg">
+  <span class="input-group-addon" id="sizing-addon-n2">@</span>
+  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon-n2">
+  <span class="input-group-btn">
+      <button class="btn" type="button">Go!</button>
+  </span>
+</div>
+<div class="input-group">
+  <span class="input-group-addon" id="sizing-addon-n3">@</span>
+  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon-n3">
+  <span class="input-group-btn">
+      <button class="btn" type="button">Go!</button>
+  </span>
+</div>
+<div class="input-group input-group-sm">
+  <span class="input-group-addon" id="sizing-addon-n4">@</span>
+  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon-n4">
+  <span class="input-group-btn">
+      <button class="btn" type="button">Go!</button>
+  </span>
+</div>
+<div class="input-group input-group-xs">
+  <span class="input-group-addon" id="sizing-addon-n5">@</span>
+  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon-n5">
+  <span class="input-group-btn">
+      <button class="btn" type="button">Go!</button>
+  </span>
+</div>
+
+flex:
+<h3>Input group sizes</h3>
+<div class="input-group input-group-flex input-group-xl">
+  <span class="input-group-addon" id="sizing-addon-f1">@</span>
+  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon-f1">
+  <span class="input-group-btn">
+      <button class="btn" type="button">Go!</button>
+  </span>
+</div>
+<div class="input-group input-group-flex input-group-lg">
+  <span class="input-group-addon" id="sizing-addon-f2">@</span>
+  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon-f2">
+  <span class="input-group-btn">
+      <button class="btn" type="button">Go!</button>
+  </span>
+</div>
+<div class="input-group input-group-flex ">
+  <span class="input-group-addon" id="sizing-addon-f3">@</span>
+  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon-f3">
+  <span class="input-group-btn">
+      <button class="btn" type="button">Go!</button>
+  </span>
+</div>
+<div class="input-group input-group-flex input-group-sm">
+  <span class="input-group-addon" id="sizing-addon-f4">@</span>
+  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon-f4">
+  <span class="input-group-btn">
+      <button class="btn" type="button">Go!</button>
+  </span>
+</div>
+<div class="input-group input-group-flex input-group-xs">
+  <span class="input-group-addon" id="sizing-addon-f5">@</span>
+  <input type="text" class="form-control" placeholder="Username" aria-describedby="sizing-addon-f5">
+  <span class="input-group-btn">
+    <button class="btn" type="button">Go!</button>
+  </span>
+</div>
+
+
 </div></div></div>
 
 </body>
