list group: reorder rules and remove active:hover state

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1769,7 +1769,7 @@ Anchor variants:<br />
     <h4 class="list-group-item-heading">List group item heading</h4>
     <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
   </a>
-  <a href="#" class="list-group-item list-group-item-action">
+  <a href="#" class="list-group-item list-group-item-action disabled">
     <h4 class="list-group-item-heading">List group item heading</h4>
     <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
   </a>
