--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -10,7 +10,7 @@
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
 <script type="text/javascript" src="../vendor/jquery.min.js"></script>
-<script type="text/javascript" src="../../js/transition.js"></script>
+<script type="text/javascript" src="../../js/util.js"></script>
 <script type="text/javascript" src="../../js/drag.js"></script>
 <script type="text/javascript" src="../../js/collapse.js"></script>
 <script type="text/javascript" src="../../js/dropdown.js"></script>
