--- a/test/js/index.html
+++ b/test/js/index.html
@@ -107,10 +107,10 @@
 <!-- Disable transitions for timing reasons, and so we don't have to watch all event callbacks -->
 <script>
     var CFW_API = false;
-    $.support.transitionEnd = false;
 </script>
 
 <!-- Widget sources (in order of concat)-->
+<script src="../../js/util.js"></script>
 <script src="../../js/drag.js"></script>
 <script src="../../js/collapse.js"></script>
 <script src="../../js/dropdown.js"></script>
