--- a/test/dev/player.html
+++ b/test/dev/player.html
@@ -11,12 +11,12 @@
 <link rel="stylesheet" href="../../docs/assets/fonts/font-awesome/css/font-awesome.min.css">
 
 <script type="text/javascript" src="../vendor/jquery.min.js"></script>
-<script type="text/javascript" src="../../js/transition.js"></script>
+<script type="text/javascript" src="../../js/util.js"></script>
 <script type="text/javascript" src="../../js/drag.js"></script>
-<script type="text/javascript" src="../../js/common.js"></script>
 <script type="text/javascript" src="../../js/dropdown.js"></script>
 <script type="text/javascript" src="../../js/slider.js"></script>
 <script type="text/javascript" src="../../js/player.js"></script>
+<script type="text/javascript" src="../../js/common.js"></script>
 
 <script type="text/javascript">
 function clearLog() {
