v3 - Component-List Group: remove list-group-item-heading and list-group-item-text in favor of utils

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1762,16 +1762,16 @@ Anchor variants:<br />
 <h3>Custom list group</h3>
 <div class="list-group">
   <a href="#" class="list-group-item list-group-item-action active">
-    <h4 class="list-group-item-heading">List group item heading</h4>
-    <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+    <h4>List group item heading</h4>
+    <p>Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
   </a>
   <a href="#" class="list-group-item list-group-item-action">
-    <h4 class="list-group-item-heading">List group item heading</h4>
-    <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+    <h4>List group item heading</h4>
+    <p>Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
   </a>
   <a href="#" class="list-group-item list-group-item-action disabled">
-    <h4 class="list-group-item-heading">List group item heading</h4>
-    <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+    <h4>List group item heading</h4>
+    <p>Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
   </a>
 </div>
 
