build out the card docs

--- a/test/visual/flexbox-cards.html
+++ b/test/visual/flexbox-cards.html
@@ -292,6 +292,81 @@ Holder.addTheme("gray", {
       </div>
     </div>
 
+    <hr />
+
+    <h2>Footer Alignment - Flexbox Only</h2>
+
+    <h3>Deck</h3>
+    <div class="card-deck-wrapper">
+      <div class="card-deck card-deck-flex">
+        <div class="card card-flex">
+          <img class="card-img-top img-responsive" data-src="holder.js/100px200/" alt="Card image cap">
+          <div class="card-block">
+            <h4 class="card-title">Card title</h4>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Last updated 3 mins ago</small>
+          </div>
+        </div>
+        <div class="card card-flex">
+          <img class="card-img-top img-responsive" data-src="holder.js/100px200/" alt="Card image cap">
+          <div class="card-block">
+            <h4 class="card-title">Card title</h4>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Last updated 3 mins ago</small>
+          </div>
+        </div>
+        <div class="card card-flex">
+          <img class="card-img-top img-responsive" data-src="holder.js/100px200/" alt="Card image cap">
+          <div class="card-block">
+            <h4 class="card-title">Card title</h4>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-muted">Last updated 3 mins ago</small>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <h3>Group</h3>
+
+    <div class="card-group card-group-flex">
+      <div class="card card-flex">
+        <img class="card-img-top img-responsive" data-src="holder.js/100px180/" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+      <div class="card card-flex">
+        <img class="card-img-top img-responsive" data-src="holder.js/100px180/" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+      <div class="card card-flex">
+        <img class="card-img-top img-responsive" data-src="holder.js/100px180/" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+    </div>
+
 </div>
 
 </body>
