--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -164,7 +164,7 @@ $(window).ready(function() {
 </head>
 <body>
 <header>
-    <div class="nav navbar navbar-full bg-inverse topnav">
+    <div class="navbar bg-inverse">
         <div class="container">
             <div class="navbar-header">
                 <h1 class="navbar-brand" style="margin: 0;">Figuration Testing</h1>
