--- a/test/visual/flexbox-navbar.html
+++ b/test/visual/flexbox-navbar.html
@@ -164,7 +164,7 @@
 </div>
 
 normal:
-<nav class="navbar navbar-full navbar-dark bg-inverse">
+<nav class="navbar navbar-dark bg-inverse">
     <div class="navbar-group">
         <a class="navbar-item navbar-brand" href="#">Navbar</a>
         <ul class="navbar-item nav navbar-item-max navbar-nav">
@@ -189,7 +189,7 @@ normal:
 </nav>
 
 flex:
-<nav class="navbar navbar-full navbar-dark bg-inverse">
+<nav class="navbar navbar-dark bg-inverse">
     <div class="navbar-group navbar-group-flex">
         <a class="navbar-item navbar-brand" href="#">Navbar</a>
         <ul class="navbar-item navbar-item-max nav navbar-nav">
@@ -214,7 +214,7 @@ flex:
 </nav>
 
 justified:
-<nav class="navbar navbar-full navbar-dark bg-inverse">
+<nav class="navbar navbar-dark bg-inverse">
     <div class="navbar-group navbar-group-justified navbar-group-flex">
         <a class="navbar-item navbar-brand" href="#">Navbar</a>
         <ul class="navbar-item nav navbar-nav text-center">
