--- a/test/dev/player.html
+++ b/test/dev/player.html
@@ -302,10 +302,10 @@ body {
     height: auto !important;
 }
 
-.player-unstarted .video-responsive:hover {
+.player-unstarted .embed-responsive:hover {
     cursor: pointer;
 }
-.player-unstarted .video-responsive:after {
+.player-unstarted .embed-responsive:after {
     display: inline-block;
     position: absolute;
     top: 50%;
@@ -326,7 +326,7 @@ body {
     opacity: 0.75;
     pointer-events: none;
 }
-.player-unstarted .video-responsive:hover:after {
+.player-unstarted .embed-responsive:hover:after {
     filter: alpha(opacity=100);
     opacity: 1;
 }
@@ -447,7 +447,7 @@ body {
 
 <h2 class="h4">Niagara Falls</h2>
 <div data-cfw="player" class="video-wrapper" role="region" aria-label="video player">
-    <div class="video-responsive">
+    <div class="embed-responsive">
         <video poster="../assets/video/niagara_falls.jpg" controls>
             <source src="../assets/video/niagara_falls.mp4" type="video/mp4" />
             <track src="../assets/video/niagara_falls-en.vtt" label="English subtitles" kind="subtitles" srclang="en" default />
@@ -499,7 +499,7 @@ body {
 
 <h2 class="h4">Niagara Falls</h2>
 <div data-cfw="player" class="video-wrapper" role="region" aria-label="video player">
-    <div class="video-responsive">
+    <div class="embed-responsive">
         <video poster="../assets/video/niagara_falls.jpg" controls preload="none">
             <source src="../assets/video/niagara_falls.mp4">
             <track src="../assets/video/niagara_falls-en.vtt" label="English" kind="subtitles" srclang="en" />
@@ -544,7 +544,7 @@ body {
 <h2 class="h4">Transcript testing</h2>
 <div class="video-transcript">
     <div data-cfw="player" class="video-wrapper" data-cfw-player-transcript="2" role="region" aria-label="video player">
-        <div class="video-responsive">
+        <div class="embed-responsive">
             <video poster="../assets/video/niagara_falls.jpg" controls preload="none">
                 <source src="../assets/video/niagara_falls.mp4">
                 <track src="../assets/video/niagara_falls-en.vtt" label="English" kind="subtitles" srclang="en" />
@@ -588,7 +588,7 @@ body {
 <h2 class="h4">Transcript as toggle</h2>
 <div class="video-transcript">
     <div data-cfw="player" class="video-wrapper" role="region" aria-label="video player" data-cfw-player-transcript-option="false" data-cfw-player-transcript=0>
-        <div class="video-responsive">
+        <div class="embed-responsive">
             <video poster="../assets/video/niagara_falls.jpg" controls>
                 <source src="../assets/video/niagara_falls.mp4" type="video/mp4" />
                 <track src="../assets/video/niagara_falls-en.vtt" label="English subtitles" kind="subtitles" srclang="en" default />
@@ -634,7 +634,7 @@ body {
 <h2 class="h4">Niagara Falls</h2>
 <div class="video-transcript">
     <div data-cfw="player" class="video-wrapper" role="region" aria-label="video player">
-        <div class="video-responsive">
+        <div class="embed-responsive">
             <video poster="../assets/video/niagara_falls.jpg" controls>
                 <source src="../assets/video/niagara_falls.mp4">
                 <track src="../assets/video/niagara_falls-en.vtt" label="English" kind="subtitles" srclang="en" />
@@ -679,7 +679,7 @@ body {
 <h2 class="h4">Transcript + Caption testing</h2>
 <div class="video-transcript">
     <div data-cfw="player" class="video-wrapper" data-cfw-player-transcript="1" role="region" aria-label="video player">
-        <div class="video-responsive">
+        <div class="embed-responsive">
             <video poster="../assets/video/niagara_falls.jpg" controls preload="none">
                 <source src="../assets/video/niagara_falls.mp4">
                 <track src="../assets/video/niagara_falls-en.vtt" label="English" kind="subtitles" srclang="en" default />
