--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1649,27 +1649,9 @@ Anchor variants:<br />
   </div>
 </progress>
 
-<h3>Video responsive</h3>
-<div class="video-sample">
-    <div class="video-responsive">
-        <video poster="../assets/video/niagara_falls.jpg" controls>
-            <source src="../assets/video/niagara_falls.mp4" type="video/mp4" />
-            <track src="../assets/video/niagara_falls-en.vtt" label="English subtitles" kind="subtitles" srclang="en" default />
-            <p>HTML5 video not supported</p>
-        </video>
-    </div>
-</div>
-<!--
-<div class="video-sample">
-    <div class="video-responsive">
-        <iframe width="420" height="315" src="https://www.youtube.com/embed/MbGkL06EU90" frameborder="0" allowfullscreen></iframe>
-    </div>
-</div>
--->
-
 <h3>Embed responsive</h3>
 <div class="video-sample">
-    <div class="embed-responsive embed-responsive-16x9">
+    <div class="embed-responsive">
         <video poster="../assets/video/niagara_falls.jpg" controls>
             <source src="../assets/video/niagara_falls.mp4" type="video/mp4" />
             <track src="../assets/video/niagara_falls-en.vtt" label="English subtitles" kind="subtitles" srclang="en" default />
@@ -1677,13 +1659,17 @@ Anchor variants:<br />
         </video>
     </div>
 </div>
-<!--
-<div class="video-sample">
-    <div class="embed-responsive embed-responsive-16x9">
-        <iframe width="420" height="315" src="https://www.youtube.com/embed/MbGkL06EU90" frameborder="0" allowfullscreen></iframe>
+
+<h3>Embed responsive - in flex element</h3>
+<div class="video-sample" style="display: flex;">
+    <div class="embed-responsive">
+        <video poster="../assets/video/niagara_falls.jpg" controls>
+            <source src="../assets/video/niagara_falls.mp4" type="video/mp4" />
+            <track src="../assets/video/niagara_falls-en.vtt" label="English subtitles" kind="subtitles" srclang="en" default />
+            <p>HTML5 video not supported</p>
+        </video>
     </div>
 </div>
--->
 
 <h3>List group</h3>
 <ul class="list-group">
